锁定目标收发包相关

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -27,7 +27,7 @@ displayName="MCG Project" #mandatory
 # A URL for the "homepage" for this mod, displayed in the mod UI
 #displayURL="https://change.me.to.your.mods.homepage.example.invalid/" #optional
 # A file name (in the root of the mod JAR) containing a logo for display
-logoFile="examplemod.png" #optional
+logoFile="icon.png" #optional
 # A text field displayed in the mod UI
 credits="Thanks for this example mod goes to Java" #optional
 # A text field displayed in the mod UI
@@ -57,8 +57,8 @@ MCGP for 1.18.2
     ordering="NONE"
     side="BOTH"
 [[dependencies.mcgproject]]
-modId="geckolib3"
-mandatory=true
-versionRange="[3.0,)"
-ordering="AFTER"
-side="BOTH"
+    modId="geckolib3"
+    mandatory=true
+    versionRange="[3.0,)"
+    ordering="AFTER"
+    side="BOTH"
